
6.7 to 7.0 (XXXXX XX, 202X)

  * Enhanced ROM launcher to allow multiple images per ROM
    (TODO: controller support, doc)

  * Added searching by filename for ROM launcher images

  * Enhanced Game Properties dialog for multigame ROMs

  * Added optional type format detection based on colors used

  * Added Joy2B+ controller support

  * Added BUS bankswitching support for some older demos

  * Fixed broken 7800 pause key support

-Have fun!


6.6 to 6.7 (June 13, 2022)

  * IMPORTANT NOTES:
    - Because of fixes to JSON handling, all remappings will be reset
      to defaults; if you had custom mappings, they will need to be
      re-entered again.
    - Because of internal changes, all state files are now invalid.

  * Completely reworked the file launcher:
    - Redesigned user interface
    - Added tracking of user favorites, recently played and most popular
      games
    - Added virtual directories for selecting tracked games
    - Added quick path navigation
    - Added navigation history
    - Added icons for files and directories
    - Added option to show/hide file extensions
    - Extended context menu and shortcuts
    - Fixed sluggish behaviour when reading large and/or invalid files

  * Added hotkey display to tooltips.

  * Added option to automatically pause emulation when focus is lost.

  * Added option to toggle autofire mode.

  * Improved controller mappings for Paddles.

  * Improved controller mappings for Driving controllers.

  * Improved Mindlink support.

  * Added another oddball TIA glitch option for score mode color.

  * Enhanced TV jitter emulation (TODO: doc).

  * Enhanced support for CDFJ+ bankswitching type.

  * Added 0FA0 bankswitching for Fotomania ROMs.

  * Added ARM chip auto detection.

  * Extended support for older BUS (experimental) ROMs that worked
    with an older, obsolete version of the BUS scheme; special thanks
    to SpiceWare for the code.

  * Fixed Stella crash due to invalid ZIP files.
