@@ -282,6 +282,7 @@
     <li>Emulates <a href="https://en.wikipedia.org/wiki/CompuMate">Spectravideo CompuMate</a> system using your computer's keyboard,
       including mapping of CompuMate 'Backspace', 'Space' and 'Enter' functionality to
       to the actual keys on your keyboard</li>
+    <li>Emulates the Kid Vid Voice Module</li>
     <li>Supports autodetection for most common controller types</li>
     <li>Support for real Atari 2600 controllers using the
       <a href="http://www.grandideastudio.com/stelladaptor-2600">Stelladaptor</a> and
@@ -5023,7 +5024,13 @@ Ms Pac-Man (Stella extended codes):
         <tr><td>CompuMate &#185</td><td>Spectravideo CompuMate (if either left or right is set, CompuMate is used for both).</td></tr>
         <tr><td>Lightgun</td><td>Atari XG-1 compatible Light Gun.</td></tr>
         <tr><td>MindLink &#185</td><td>MindLink controller.</td></tr>
-        <tr><td>KidVid</td><td>Kid Vid Voice Module, limited support (Right Keyboard controller buttons 1, 2 and 3 start the games, default mapping is 8, 9 and 0).</td></tr>
+        <tr><td>KidVid</td><td>Kid Vid Voice Module (Right Keyboard controller
+          buttons 1, 2 and 3 start the games, default mapping is 8, 9 and 0).</br>
+          Audio files can be downloaded e.g. from <a href="https://www.atariage.com/2600/archives/KidVidAudio/">AtariAge</a>.
+          Put unzipped .WAV files into Stella's base directory (see properties
+          or palette files below for details).</br>
+          Note: Stella supports playing the games without audio files too.
+        </td></tr>
         <tr><td>QuadTari</td><td><a href="#Quadtari">QuadTari</a> controller, limited support (see below).</td></tr>
       </table></td>
     </tr>
